--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
+    <script src="https://kit.fontawesome.com/91a8643f56.js" crossorigin="anonymous"></script>
     <!-- CSSファイルの読み込み -->
     <link rel="stylesheet" href="style.css" />
     <title>CARAVAN</title>
@@ -12,6 +13,12 @@
   <h1 class="heading">
     <a href="index.html">CARAVAN</a>
   </h1>
+  <div class="social">
+    <i class="fa-brands fa-facebook"></i>
+    <i class="fab fa-twitter-square"></i>
+    <i class="fab fa-instagram"></i>
+  </div>
+  
 </header>
 
 <nav>
@@ -50,12 +57,110 @@
               </h3>
               <p class="blog-date">June 19, 2017</p>
               <span class="category">Nature</span>
-  
+
             </section>
           </div>
         </div>
+         <div class="blog-box">
+          <div class="blog-item">
+            <img class="blog-image" src="img/desert.jpg">
+            <section class="blog-text">
+              <h3 class="blog-text-heading">
+                <a href="single.html">
+                  How to fight<br>
+                  desertification and<br>
+                  reverse climate change
+                 </a>
+              </h3>
+              <p class="blog-date">June 17, 2017</p>
+              <span class="category">Nature</span>
+
+            </section>
+          </div>
+        </div>
+         <div class="blog-box">
+          <div class="blog-item">
+            <img class="blog-image" src="img/sunset.jpg">
+            <section class="blog-text">
+              <h3 class="blog-text-heading">
+                <a href="single.html">
+                  Why I'm rowing<br>
+                  across the Pacific
+                  </a>
+              </h3>
+              <p class="blog-date">June 16, 2017</p>
+              <span class="category">Adventure</span>
+
+            </section>
+          </div>
+        </div>
+         <div class="blog-box">
+          <div class="blog-item">
+            <img class="blog-image" src="img/asia.jpg">
+            <section class="blog-text">
+              <h3 class="blog-text-heading">
+                <a href="single.html">
+                  The case for<br>
+                  engineering our food
+                </a>
+              </h3>
+              <p class="blog-date">June 14, 2017</p>
+              <span class="category">Culture</span>
+
+            </section>
+          </div>
+        </div>
+        <div class="blog-box">
+          <div class="blog-item">
+            <img class="blog-image" src="img/italy.jpg">
+            <section class="blog-text">
+              <h3 class="blog-text-heading">
+                <a href="single.html">
+                  Unseen footage,<br>
+                  untamed nature
+                  </a>
+              </h3>
+              <p class="blog-date">June 15, 2017</p>
+              <span class="category">Nature</span>
+
+            </section>
+          </div>
+        </div>
+
       </section>
-      <div class="sidebar"></div>
+      <div class="sidebar">
+          <section class="populer">
+            <h2 class="popular-heading common-heading">Populer</h2>
+              <p class="popular-text">To solve old problems,<br>study new species</p>
+              <p class="popular-text">Why Earth may someday<br>look like Mars</p>
+              <p class="popular-text">What will humans look<br>like in 100 years?</p>
+              <p class="popular-text">How to grow a forest<br>in your backyard</p>
+              <p class="popular-text">How humans could evolve<br>to survive in space</p>
+          </section>
+          <section class="instagram">
+          <h2 class="instagram-heading common-heading">Instagram</h2>
+          <div class="sidebar-contents">
+            <div class="instagram-box"></div>
+            <div class="instagram-box"></div>
+            <div class="instagram-box"></div>
+            <div class="instagram-box"></div>
+            <div class="instagram-box"></div>
+            <div class="instagram-box"></div>
+          </div>
+        </section>
+         <section class="categories">
+          <h2 class="categories-heading common-heading">Categories</h2>
+          <div class="sidebar-contents">
+            <p class="categories-text">Technology(15)</p>
+            <p class="categories-text">Business(23)</p>
+            <p class="categories-text">Entertainment(12)</p>
+            <p class="categories-text">Nature(32)</p>
+            <p class="categories-text">Education(9)</p>
+            <p class="categories-text">Adventure(23)</p>
+            <p class="categories-text">Communication(14)</p>
+          </div>
+        </section>
+      </div>
     </main>
 
 <footer>
